VeraSandBox2016/src/objects/Nomination__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( Contact__r.Birthdate ) ) ,
IF( DATE( 2000 , MONTH( Contact__r.Birthdate ) , DAY( Contact__r.Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( Contact__r.Birthdate ),
YEAR (Today()) - YEAR ( Contact__r.Birthdate ) -1 ),
null)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Already_Participated_in_JRR_Course__c</fullName>
        <label>Already Participated in JRR Course</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Summary__c</fullName>
        <label>Application Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CFN__c</fullName>
        <label>CFN</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Nominations</relationshipLabel>
        <relationshipName>Nominations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Certif_Date__c</fullName>
        <label>Certif. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments_Notes__c</fullName>
        <label>Comments/Notes</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Expert_Received__c</fullName>
        <label>Confirmation Expert Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_Nominating_Entity_Received__c</fullName>
        <label>Confirmation Nominating Entity Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <label>Contact Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Nominations</relationshipLabel>
        <relationshipName>Nominations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Expertise_1__c</fullName>
        <formula>Contact__r.Core_Expertise_1__r.Name</formula>
        <label>Core Expertise 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Expertise_2__c</fullName>
        <formula>Contact__r.Core_Expertise_2__r.Name</formula>
        <label>Core Expertise 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Expertise_3__c</fullName>
        <formula>Contact__r.Core_Expertise_3__r.Name</formula>
        <label>Core Expertise 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Expertise__c</fullName>
        <formula>Core_Expertise_1__c +&apos;; &apos;+ Core_Expertise_2__c +&apos;; &apos;+ Core_Expertise_3__c</formula>
        <label>Core Expertise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Applying_for_Visa__c</fullName>
        <label>Country Applying for Visa</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSA_Daily_Rate_EUR__c</fullName>
        <label>DSA Daily Rate EUR</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSA_Entitled__c</fullName>
        <label>DSA Entitled</label>
        <picklist>
            <picklistValues>
                <fullName>TBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSA_Nbr_of_Days__c</fullName>
        <label>DSA Nbr of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSA_Total_Amount_EUR__c</fullName>
        <formula>DSA_Daily_Rate_EUR__c  *  DSA_Nbr_of_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSA Total Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dietary_Requirements__c</fullName>
        <label>Dietary Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_1__c</fullName>
        <label>Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expression_of_interest_Statement__c</fullName>
        <inlineHelpText>Please state your expression of interest in participating in this training course in view of being certified to an international roster of rapidly deployable experts (max 300 words).</inlineHelpText>
        <label>Expression of interest Statement</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Support_Requested__c</fullName>
        <label>Financial Support Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flight_Booked_Date__c</fullName>
        <label>Flight Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Booked__c</fullName>
        <label>Flight Booked</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Contact__r.Gender__c)</formula>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_South__c</fullName>
        <formula>Contact__r.Global_South__c</formula>
        <label>Global South</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Booked_Date__c</fullName>
        <label>Hotel Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Booked__c</fullName>
        <label>Hotel Booked</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_in__c</fullName>
        <label>Hotel Check-in</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_out__c</fullName>
        <label>Hotel Check-out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Daily_Rate_Amount__c</fullName>
        <label>Hotel Daily Rate Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hotel_Daily_Rate_Currency__c</fullName>
        <label>Hotel Daily Rate Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Nbr_of_Nights__c</fullName>
        <label>Hotel Nbr of Nights</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Paid_by_JRR__c</fullName>
        <label>Hotel Paid by JRR</label>
        <picklist>
            <picklistValues>
                <fullName>TBA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_Total_Amount__c</fullName>
        <formula>Hotel_Nbr_of_Nights__c  *  Hotel_Daily_Rate_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interview_Summary__c</fullName>
        <label>Interview Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Profession__c</fullName>
        <formula>Contact__r.Main_Profession__r.Name</formula>
        <label>Main Profession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Entity_CFN_Received_From__c</fullName>
        <inlineHelpText>Please indicate from which entity you received the Call for Nomination</inlineHelpText>
        <label>Name of Entity CFN Received From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_s_of_Referees_Contacted__c</fullName>
        <label>Name(s) of Referees Contacted</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nominating_Entity_Name__c</fullName>
        <label>Nominating Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Expert_Sent__c</fullName>
        <label>Notification Expert Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Nominating_Entity_Sent__c</fullName>
        <label>Notification Nominating Entity Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Evaluation__c</fullName>
        <description>This is a trigger-stamped average of all Overall Evaluation scores looking up to this Nomination</description>
        <label>Overall Evaluation</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Scan_Provided_Date__c</fullName>
        <label>Passport Scan Provided Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Scan_Provided__c</fullName>
        <label>Passport Scan Provided</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Training_Quiz_Provided__c</fullName>
        <label>Post-Training Quiz Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Training_Quiz_Provided__c</fullName>
        <label>Pre-Training Quiz Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Training_Course__c</fullName>
        <inlineHelpText>If the nominee has already participated in a JRR course, please indicate which course.</inlineHelpText>
        <label>Previous Training Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professions__c</fullName>
        <formula>Main_Profession__c +&apos;; &apos;+ Secondary_Profession__c</formula>
        <label>Professions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>R-List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_Rank__c</fullName>
        <label>R-Rank</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_s_Summary__c</fullName>
        <label>Reference(s) Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_with_Nominee__c</fullName>
        <label>Relationship with Nominee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEL__c</fullName>
        <label>SEL Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Profession__c</fullName>
        <formula>Contact__r.Secondary_Profession__r.Name</formula>
        <label>Secondary Profession</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seniority_Age__c</fullName>
        <formula>Seniority__c +&apos;; &apos;+  TEXT(Age__c)</formula>
        <label>Seniority-Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <formula>TEXT(Contact__r.Seniority__c )</formula>
        <label>Seniority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype_Name__c</fullName>
        <label>Skype Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Requests__c</fullName>
        <label>Special Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUB</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PREP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB-CERT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CERT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title_Position__c</fullName>
        <label>Title/Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Nominations</relationshipLabel>
        <relationshipName>Nominations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Entity_CFN_Received_From__c</fullName>
        <inlineHelpText>JRR: Justice Rapid Response
EMP: Employer
GOV: Govermental
IGO: Inter-governmental
NGO-CS: Non-governmental - Civil society organisation
PERS: Personal Network</inlineHelpText>
        <label>Type of Entity CFN Received From</label>
        <picklist>
            <picklistValues>
                <fullName>JRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO-CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Organization__c</fullName>
        <inlineHelpText>GOV: Govermental organistation
IGO: Inter-governmental organisation
NGO-CS: Non-governmental - Civil society organisation
PHIL: Philanthropic organisation
FIRM: Law firm
EDU: Educational organisation
PRIV: Private organisation or independent</inlineHelpText>
        <label>Type of Organization</label>
        <picklist>
            <picklistValues>
                <fullName>GOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IGO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO-CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visa_Obtained_Date__c</fullName>
        <label>Visa Obtained Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Obtained__c</fullName>
        <label>Visa Obtained</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Nomination</label>
    <listViews>
        <fullName>All_Nominations</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Training__c</columns>
        <columns>Contact__c</columns>
        <columns>Nominating_Entity_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Nominations</label>
    </listViews>
    <nameField>
        <displayFormat>NOM-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>If_Previous_Course_Must_Specify</fullName>
        <active>true</active>
        <description>If nominee has indicated that they previously participated in JRR Training Course, the &quot;Previous Training Course&quot; cannot be left blank</description>
        <errorConditionFormula>AND(  ISPICKVAL(Already_Participated_in_JRR_Course__c, &quot;Yes&quot;)  , ISBLANK( Previous_Training_Course__c ) )</errorConditionFormula>
        <errorDisplayField>Previous_Training_Course__c</errorDisplayField>
        <errorMessage>If the nominee has already participated in a JRR course, please indicate which course.</errorMessage>
    </validationRules>
</CustomObject>